# pearl-backend

./: .eslintrc.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE.md  README.md  chartpress.yaml  docker-compose.yml  index.js  local  package-lock.json  package.json  start  test.sh
.github/workflows/: api_test.yml  chartpress.yml  gpu_test.yml  lint.yml  socket_test.yml  test.yml
api/: API.md  README.md  index.js  package-lock.json  package.json  schema.sql
api/doc/: api_data.js  api_data.json  api_project.js  api_project.json
api/lib/: auth.js  config.js  error.js  instance.js  model.js
api/schema/: login.json  user.json
deployment/: Dockerfile  docker-compose.yml
deployment/helm/: chartpress.yaml
docs/: azure.md  deploy.md  index.html  logs.md  ml.md  pearl-helm
gpu/: README.md  index.js  package-lock.json  package.json
helpers/: create_sentinel_mosaic.py
lulc-helm/: Chart.yaml  requirements.yaml  values.dev.template.yaml  values.prod.template.yaml  values.staging.template.yaml  values.yaml
lulc-helm/templates/: ingress.yaml
scripts/: cibuild  cideploy  cipublish  destroy  setup  test  update
services/api/: .babelrc  .eslintrc.json  API.md  Dockerfile  README.md  batch.js  index.js  knexfile.js  migration.stub  package-lock.json  (+2 more)
services/stac/: Dockerfile  pyproject.toml  requirements.txt  start.sh
services/stac/api/: __init__.py  app.py  settings.py
test/: aoi-share.test.js  flow.test.js  init.js  lib.js  output.js  prediction.test.js  term.js  util.js  worker.js
tiles/: Dockerfile  requirements.txt  setup.py
(+506 files in other folders)
